--- a/rootdir/etc/init.device.rc
+++ b/rootdir/etc/init.device.rc
@@ -4,6 +4,11 @@ on init && property:ro.boot.hardware.sku=XT1672
 on init && property:ro.boot.hardware.sku=XT1675
     setprop ro.vendor.hw.ecompass true
 
+on init
+    # Change ownership for Pocketmode feature
+    chown system system /sys/devices/soc/7af6000.spi/spi_master/spi6/spi6.0/proximity_state
+    chmod 0660 /sys/devices/soc/7af6000.spi/spi_master/spi6/spi6.0/proximity_state
+
 on early-boot
     # STML0 driver parameter permissions
     chown root oem_5004 /sys/module/stml0xx/parameters/irq_disable
