--- a/rootdir/etc/init.device.rc
+++ b/rootdir/etc/init.device.rc
@@ -34,7 +34,7 @@ on boot
 
 on post-fs-data
     # Sensor Hub calibration data directory
-    mkdir /data/misc/sensorhub 0770 system compass
+    mkdir /data/vendor/sensorhub 0770 system compass
 
     # Setup folder for native to transfer data to NativeDropBoxAgent
     mkdir /data/system/dropbox-add 0730 system diag
