--- a/rootdir/etc/init.device.rc
+++ b/rootdir/etc/init.device.rc
@@ -1,3 +1,9 @@
+on property:ro.boot.hardware.sku=XT1672
+    setprop ro.vendor.hw.ecompass true
+
+on property:ro.boot.hardware.sku=XT1675
+    setprop ro.vendor.hw.ecompass true
+
 on early-boot
     # STML0 driver parameter permissions
     chown root oem_5004 /sys/module/stml0xx/parameters/irq_disable
