cedric: Nuke check_device.sh
Signed-off-by: Jarl-Penguin <jarlpenguin@outlook.com>
Change-Id: I93f1e025004e15832a90378ee2086f19362029cc

--- a/rootdir/etc/init.device.rc
+++ b/rootdir/etc/init.device.rc
@@ -1,7 +1,7 @@
-on property:ro.boot.hardware.sku=XT1672
+on init && property:ro.boot.hardware.sku=XT1672
     setprop ro.vendor.hw.ecompass true
 
-on property:ro.boot.hardware.sku=XT1675
+on init && property:ro.boot.hardware.sku=XT1675
     setprop ro.vendor.hw.ecompass true
 
 on early-boot
